--- a/cloudformation/ExportCloudWatchLogsToS3.yml
+++ b/cloudformation/ExportCloudWatchLogsToS3.yml
@@ -14,6 +14,8 @@ Parameters:
     Type: String
   CronExportLogsEventRuleURL:
     Type: String
+  FailOrTimeOutNotificationEventRuleURL:
+    Type: String
   SendEmailNotificationURL:
     Type: String
   EmailAddress:
@@ -76,7 +78,8 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       TemplateURL: !Ref SendEmailNotificationURL
-      EmailAddress: !Ref EmailAddress
+      Parameters:
+        EmailAddress: !Ref EmailAddress
 
   CronExportLogsEventRule:
     Type: AWS::CloudFormation::Stack
@@ -89,9 +92,10 @@ Resources:
   FailOrTimeOutNotificationEventRule:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Ref EventRuleTemplateURL
+      TemplateURL: !Ref FailOrTimeOutNotificationEventRuleURL
       Parameters:
         StepFunctionsStateMachineArn: !GetAtt StepFunctionsStateMachine.Outputs.Arn
+        SendEmailNotificationTopicArn: !GetAtt SendEmailNotification.Outputs.Arn
     DependsOn:
       - StepFunctionsStateMachine
       - SendEmailNotification
