--- a/cloudformation/eventbridge/FailOrTimeOutNotificationEventRule.yml
+++ b/cloudformation/eventbridge/FailOrTimeOutNotificationEventRule.yml
@@ -1,7 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: >
-        This stack shows how to build your own EventBridge bus
+Description: This stack create event bridge rule to publish message to sns topic when step functions fails or times out
 
 Parameters:
   StepFunctionsStateMachineArn:
