--- a/cloudformation/lambda/cloudformation-templates/describe_export_task.yml
+++ b/cloudformation/lambda/cloudformation-templates/describe_export_task.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Lambda function with cfn-response.
+Description: DescribeExportTaskLambda function.
 
 Parameters:
   S3BucketParam:
