--- a/cloudformation/s3/S3.yml
+++ b/cloudformation/s3/S3.yml
@@ -1,30 +1,11 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Create S3 bucket for exporting logs
 
-# Parameters:
-#   BucketName:
-#     Type: String
-#     # Default: "cloudwatch-logs-exported-to-s3-20220330"
-#     Description: A name for the logs bucket.
-#     Default: !Join
-#       - "-"
-#       - - "cloudwatchlogs"
-#         - !Select
-#           - 0
-#           - !Split
-#             - "-"
-#             - !Select
-#               - 2
-#               - !Split
-#                 - "/"
-                # - !Ref "AWS::StackId"
-
 Resources:
   CloudWatchLogsBucket:
     Type: "AWS::S3::Bucket"
-    # DeletionPolicy: Retain
+    DeletionPolicy: Retain
     Properties:
-      # BucketName: !Ref BucketName
       BucketName: !Join
         - "-"
         - - "cloudwatchlogs"
@@ -65,6 +46,5 @@ Resources:
               - logs.ap-northeast-1.amazonaws.com
 Outputs:
   BucketName:
-    # Value: !Ref BucketName
     Value: !Ref CloudWatchLogsBucket
     Description: "Bucket name"
